# terminal-trx

./: Cargo.toml  changelog.md  coverage.sh  readme.md
.github/workflows/: ci.yml
crates/pty-utils/: Cargo.toml
src/: io_error.rs  lib.rs  main.rs  unix.rs  unsupported.rs  windows.rs
src/unix/: attr.rs  pty_utils.rs  tests.rs
src/windows/: console_mode.rs  msys.rs
